# MARCH

./: .gitignore  CMakeLists.txt  Grammar.md  build.sh  main.mch  output.out
other/: LICENSE.txt
src/headers/: AST.h  Lexer.h  Logger.h  Parser.h  Token.h  TokenType.h
src/source/: Lexer.cpp  Parser.cpp  Token.cpp  main.cpp
