cmake_minimum_required(VERSION 3.10)
project(March)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})


file(GLOB SOURCES "${CMAKE_SOURCE_DIR}/src/source/*.cpp")

add_executable(March ${SOURCES})

target_include_directories(March PRIVATE ${CMAKE_SOURCE_DIR}/src/headers)
